Adding login, home, signup, signupSuccess.html...Just need to implement login

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,10 @@
-<button type="submit">Sign Up</button>
+<div>
+    Welcome to GiveUsAnADrSpeegle's DB Project!
 
-<a href="" target="_blank">Sign Up</a>
-
-<form action="/signup">
-    <p><input type="submit" value="Sign Up"/></p>
-</form>
+    <form action="/signup">
+        <p><input type="submit" value="Sign Up"/></p>
+    </form>
+    <form action="/login">
+        <p><input type="submit" value="Login"/></p>
+    </form>
+</div>
