--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,5 @@
 <form action="/dashboard" method="POST">
     <p>Username <input type="text" name="username"/></p>
     <p>Password <input type="password" name="password"/></p>
-    <p><input type="submit" value="submit"/></p>
+    <p><input type="submit" value="Sign Up"/></p>
 </form>
