Fixing rerouting for signupsuccess

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,8 @@
     <form action="/signup">
         <p><input type="submit" value="Sign Up"/></p>
     </form>
+
+    DONT USE LOGIN YET, i need to implement it and dont want it screwing something up
     <form action="/login">
         <p><input type="submit" value="Login"/></p>
     </form>
