--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,4 @@
-<form action="/dashboard" method="POST">
+<form action="/signupSuccess" method="POST">
     <p>Username <input type="text" name="username"/></p>
     <p>Password <input type="password" name="password"/></p>
     <p><input type="submit" value="Sign Up"/></p>
