Adding initial year setup and fixing app.py

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,3 +2,12 @@
 <h2> {{key}}</h2>
 <p> {{value}}</p>
 {% endfor %}
+
+<div>
+    <label for="years">Choose a year:</label>
+
+    <select name="years" id="years">
+        <option value="2021">2021</option>
+        <option value="2020">2020</option>
+    </select>
+</div>
