--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,13 @@
+<h1>{{teams}}</h1>
+
 <form action="/signupSuccess" method="POST">
     <p>Username <input type="text" name="username"/></p>
     <p>Password <input type="password" name="password"/></p>
+
+    <label for="teams">Favorite Team:</label>
+
+    <select name="teams" id="teams">
+        {{ teams }}
+    </select>
     <p><input type="submit" value="Sign Up"/></p>
 </form>
