Adding all then new stuff to change fav team

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,9 @@
 <p>{{ username }}</p>
+<p>{{ favTeam }}</p>
+
+<form action="/changeFav">
+    <p><input type="submit" value="Edit Favorite Team"/></p>
+</form>
 
 <div>
 
@@ -11,5 +16,6 @@
     </select>
 
     <button type="submit">Submit</button>
+
 
 </div>
