--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,6 +11,7 @@
     </select>
 
     <input type="hidden" value="{{username}}" name="username"/>
+    <input type="hidden" value="{{password}}" name="password"/>
 
     <p><input type="submit" value="Edit Favorite Team"/></p>
 </form>
