--- a/templates/changeFav.html
+++ b/templates/changeFav.html
@@ -1,7 +1,10 @@
 <div>
     You successfully changed your name!
 
-    <form action="/dashboard">
+    <form action="/dashboard" method="POST">
+        <input type="hidden" name="username" value="{{ username }}"/>
+        <input type="hidden" name="password" value="{{ password }}"/>
         <p><input type="submit" value="Back to Dashboard"/></p>
     </form>
+    
 </div>
