Adding a few changes to dashbaord pt2...I need Tylers changes to have the roster working so we can do the last table.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@
 <br></br>
 <br></br>
 
-
+<h2>Choose year to display roster for your favorite team</h2>
 <div>
 
     <form action="/roster" method="POST">
