--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,5 @@
 <h1>Welcome {{ username }}!</h1>
-<h2>Current Favorite Team: {{ favTeam }}</h2>
+<h2>Current Favorite Team: {{ favTeamName }}</h2>
 
 <form action="/changeFav" method="POST">
     <label for="teams">Edit Favorite Team:</label>
