--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,13 +25,11 @@
     <form action="/standing" method="POST">
         <label for="years">Select a Year!</label>
 
-        <select name="standings" id="standings" onchange="roster(value)">
+        <select name="years" id="years" onchange="roster(value)">
             {% for year in years %}
             <option value="{{ year }}">{{ year }}</option>
             {% endfor %}
         </select>
-
-        <input type="hidden" value = "{{ favTeam }}" name="favTeam">
 
         <input type="submit" value="Submit"/>
     </form>
@@ -90,6 +88,12 @@
 
 <script>
     function roster(year) {
+        console.log(year);
+    }
+</script>
+
+<script>
+    function standing(year) {
         console.log(year);
     }
 </script>
