A lot of standing fixes and a lot of misc. redirect bug fixes

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <div>
-    Welcome to GiveUsAnADrSpeegle's DB Project!
+    <h1>Welcome to GiveUsAnADrSpeegle's DB Project!</h1>
 
     <form action="/signup">
         <p><input type="submit" value="Sign Up"/></p>
