--- a/templates/roster.html
+++ b/templates/roster.html
@@ -1,5 +1,4 @@
-<p>{{ year }}</p>
-<p>{{ favTeam }}</p>
+<h1 style="color: darkmagenta">Roster for: {{ favTeam }} {{ year }}</h1>
 
 <p>{{ displayString }}</p>
 
