--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,5 @@
+<h1>Login</h1>
+
 <form action="/dashboard" method="POST">
     <p>Username <input type="text" name="username"/></p>
     <p>Password <input type="password" name="password"/></p>
