--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,5 @@
+<h1>Signup</h1>
+
 <form action="/signupSuccess" method="POST">
     <p>Username <input type="text" name="username"/></p>
     <p>Password <input type="password" name="password"/></p>
